Fix Maven project structure: Move source files to src/main/java and update pom.xml with mainClass configuration

--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <mainClass>com.minidoordash.MiniDoorDashApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
