Fix classpath issue: Use JAR file with minimal profile and enhanced exclusions

--- a/src/main/resources/application-minimal.yml
+++ b/src/main/resources/application-minimal.yml
@@ -17,6 +17,8 @@ spring:
       - org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
       - org.springframework.boot.autoconfigure.security.servlet.SecurityFilterAutoConfiguration
       - org.springframework.boot.autoconfigure.sql.init.SqlInitializationAutoConfiguration
+      - org.springframework.boot.autoconfigure.transaction.TransactionAutoConfiguration
+      - org.springframework.boot.autoconfigure.validation.ValidationAutoConfiguration
 
 logging:
   level:
